--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- YOUR CODE GOES UNDER HERE -->
     <br><br><br>
     <h1 class="quangh0"> The History of</h1><h1 class="cs695"> Computer Science </h1>
-    <h1 class="cs888">by Quang Huynh, Conner La, and Liz Schlander</h1>
+    <h1 class="cs888">by Quang Huynh</h1>
     <!--Slide 1 Connor -->
   <div>
     <br><br><br><br><br>
@@ -243,7 +243,7 @@
         <li class="quangp">Programs that give hardware functionality</li><br><br></center>
       </ul>
     </ol><center>
-     <img src='https://cdn.discordapp.com/attachments/905789214220775454/906263831305666560/unknown.png' class='image'>
+     <img src='https://cdn.discordapp.com/attachments/931674944063029259/1202078207944163328/image.png?ex=65cc2592&is=65b9b092&hm=81bcc64e5639b5555b052a87&' class='image'>
     <p class='quangp'><strong>On the left: software; On the right: hardware</strong><br>
     <p class="quangp">Find more on <a href='https://www.diffen.com/difference/Hardware_vs_Software' target='_blank'>Hardware vs. Software</a></p></center>
      <br><br><Br><br><Br><br><br><Br><br><Br>
